[project]
name = "asyncio-advanced-semaphores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["redis>=7.1.0", "stlog>=0.5.0", "tenacity>=9.1.2"]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "ty>=0.0.11",
]

[tool.setuptools.package-data]
async_redis_rate_limiters = ["redis/lua/*.lua"]

[tool.setuptools]
packages = [
    "asyncio_advanced_semaphores",
    "asyncio_advanced_semaphores.redis",
    "asyncio_advanced_semaphores.memory",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"
